--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
 body{ 
 font-family: monospace;
- 
-
-  
   background-repeat: no-repeat;
   background-color: black;
-
   text-align: center;
   letter-spacing: 1px;
     margin-top: 0px;
@@ -16,21 +12,15 @@ font-family: monospace;
  color: gray;  
 }
 a{ 
-
- 
 font-size: 20px;
   background-image:cover;
-
-  
   text-align: center;
-    text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: 125px;
     margin-bottom: 10px;
   text-decoration: none;
   
-
-color: red;
+color: pink;
 }
 .s{
   color:white;
@@ -49,4 +39,15 @@ margin-right: 1800px;
 }
 .sr3{
 color: green;
+}
+button{
+  background-color:black;
+  color:white;
+  border:none;
+}
+button:hover{
+  background-color:darkgray;
+}
+a:hover{
+  color:red;
 }
